# geo_lpc1114

./: .gitignore  New_Library.kicad_sym  geo_lpc1114.kicad_pcb  geo_lpc1114.kicad_pro  geo_lpc1114.kicad_sch
firmware/: CMakeLists.txt  memo.txt
firmware/cmake/: toolchain-arm-gcc.cmake
firmware/ld/: lpc1114_32k_4k.ld
firmware/src/: main.c  startup.c
pcb/: New_Library.kicad_sym  fp-lib-table  geo_lpc1114.kicad_pcb  geo_lpc1114.kicad_pro  geo_lpc1114.kicad_sch
